--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "@skypro-web-developer/backend-02-template",
   "version": "1.0.0",
-  "description": "Шаблон для выполнения второго домашнего задания",
+  "description": "Второе домашнее задание",
   "private": true,
   "main": "src/index.js",
   "scripts": {
-    "dev": "",
-    "start": ""
+    "dev": "nodemon src/app.js",
+    "start": "node src/app.js"
   },
-  "author": ""
+  "author": "",
+  "devDependencies": {
+    "nodemon": "^3.1.2"
+  }
 }
