--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@skypro-web-developer/backend-02-template",
   "version": "1.0.0",
-  "description": "Второе домашнее задание",
+  "description": "Второе домашнее задание по бекэнду",
   "private": true,
   "main": "src/index.js",
   "scripts": {
